--- a/index.html
+++ b/index.html
@@ -2,51 +2,34 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>IT Tools - Handy online tools for developers</title>
-    <meta itemprop="name" content="IT Tools - Handy online tools for developers" />
+    <link href="favicon.ico" rel="icon" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <title>IT Tools - 开发者常用工具</title>
+    <meta content="IT Tools - 开发者常用工具" itemprop="name" />
     <meta
+      content="开发者常用工具"
       name="description"
-      content="Collection of handy online tools for developers, with great UX. IT Tools is a free and open-source collection of handy online tools for developers & people working in IT."
     />
     <meta
+      content="Collection of 开发者常用工具"
       itemprop="description"
-      content="Collection of handy online tools for developers, with great UX. IT Tools is a free and open-source collection of handy online tools for developers & people working in IT."
     />
-    <link rel="author" href="humans.txt" />
-    <link rel="canonical" href="https://it-tools.tech" />
-
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
-    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#18a058" />
-    <meta name="msapplication-TileColor" content="#da532c" />
-    <meta name="theme-color" content="#ffffff" />
-
-    <meta property="og:url" content="https://it-tools.tech/" />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="IT Tools - Handy online tools for developers" />
+    <link href="apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180" />
+    <link href="favicon-32x32.png" rel="icon" sizes="32x32" type="image/png" />
+    <link href="favicon-16x16.png" rel="icon" sizes="16x16" type="image/png" />
+    <link color="#18a058" href="safari-pinned-tab.svg" rel="mask-icon" />
+    <meta content="#da532c" name="msapplication-TileColor" />
+    <meta content="#ffffff" name="theme-color" />
+    <meta content="website" property="og:type" />
+    <meta content="IT Tools - 开发者常用工具" property="og:title" />
     <meta
+      content="开发者常用工具"
       property="og:description"
-      content="Collection of handy online tools for developers, with great UX. IT Tools is a free and open-source collection of handy online tools for developers & people working in IT."
     />
-    <meta property="og:image" content="https://it-tools.tech/banner.png?v=2" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@ittoolsdottech" />
-    <meta name="twitter:creator" content="@cthmsst" />
-
-    <meta name="twitter:title" content="IT Tools - Handy online tools for developers" />
-    <meta
-      name="twitter:description"
-      content="Collection of handy online tools for developers, with great UX. IT Tools is a free and open-source collection of handy online tools for developers & people working in IT."
-    />
-    <meta name="twitter:image" content="https://it-tools.tech/banner.png?v=2" />
-    <meta name="twitter:image:alt" content="IT Tools - Handy online tools for developers" />
+    <meta content="IT Tools - 开发者常用工具" name="twitter:title" />
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <script src="/src/main.ts" type="module"></script>
   </body>
 </html>
